--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "chart.js": "^2.8.0",
     "pokeapi-js-wrapper": "^1.1.2",
     "react": "^16.9.0",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "typescript": "3.6.2"
