Add gh-pages to package

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "birch-labs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://micort35.github.io/birch-labs",
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.4",
@@ -16,6 +17,8 @@
     "typescript": "3.6.2"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -35,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
